--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="index.php"><img src="medias-site/logoDeukSil.png" alt="logo"></a>
+        <a href="index.html"><img src="medias-site/logoDeukSil.png" alt="logo"></a>
         <form action="" method="POST" class="search-bar">
             <input type="text" name="search" id="search" placeholder="Un Lieu ?">
             <button type="submit">Rechercher</button>
